8. Basic Class Structure Part 2 Finished
https://docs.google.com/document/d/1HJy9v9DZdRySyXtq6AzRS7Meg5sf4b8BXzMiXI637jk/edit?tab=t.0#heading=h.qyv1ik22685x

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
 EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-GlobalDefaultGameMode="/Script/CWGameV3.CWGameV3GameMode"
+GlobalDefaultGameMode=/Game/GameModes/BP_CWBaseGameMode.BP_CWBaseGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
